--- a/viteDeploy/package.json
+++ b/viteDeploy/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3"
